--- a/index.html
+++ b/index.html
@@ -248,19 +248,8 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <strong>Yoda Me Astrology</strong> by: Exceptional Handlers
-        <p>
-            <a href="SM">Stephanie McCandless</a>
-        </p>
-        <p>
-            <a href="ND">Nhi Danis</a>
-        </p> 
-        <p>
-            <a href="MH">Max Higga</a>
-        </p>
-        <p>
-            <a href="MB">Michael Burkett</a>
-        </p>
+        <strong>Yoda Me Astrology</strong> Exceptional Handlers <a href="SM">Stephanie McCandless</a> <a href="ND">Nhi Danis</a>  <a href="MH">Max Higga</a> <a href="MB">Michael Burkett</a>
+
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
