Revert "update pull"

--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
   <!-- axios script link -->
   <footer class="footer">
     <div class="content has-text-centered">
-      <p id="footer">
-        <strong>Yoda Me Astrology</strong> Exceptional Handlers: <a href="SM">Stephanie McCandless</a> || <a href="ND">Nhi Danis</a> || <a href="MH">Max Higa</a> || <a href="MB">Michael Burkett</a>
+      <p>
+        <strong>Yoda Me Astrology</strong> Exceptional Handlers <a href="SM">Stephanie McCandless</a> <a href="ND">Nhi Danis</a>  <a href="MH">Max Higga</a> <a href="MB">Michael Burkett</a>
 
     </div>
   </footer>
