--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,14 +18,15 @@
   <!--favicon-->
   <link rel="shortcut icon" href="https://img.icons8.com/flat_round/64/000000/warranty-card.png" />
 </head>
-<body>  
+
+<body>
   <!-- horoscope choosing body // sign buttons -->
   <section class="hero is-fullheight-with-navbar">
     <div class="hero-body">
       <div class="container">
         <div class="center-align">
-          <img id="nav-img" src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
+          <img id="nav-img" src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px"
+            height="200px">
           <br>
           <span class="nav-title">Yoda-Me-Astrology</span>
         </div>
@@ -44,8 +46,7 @@
             <span class="helper"></span>
             <div>
               <div class="popupCloseButton">&times;</div>
-              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
               <h2>Aquarius</h2>
               <h4></h4>
             </div>
@@ -61,8 +62,7 @@
             <span class="helper"></span>
             <div>
               <div class="popupCloseButton">&times;</div>
-              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
               <h2>Pisces</h2>
               <h4></h4>
             </div>
@@ -78,8 +78,7 @@
             <span class="helper"></span>
             <div>
               <div class="popupCloseButton">&times;</div>
-              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
               <h2>Aries </h2>
               <h4></h4>
             </div>
@@ -95,8 +94,7 @@
             <span class="helper"></span>
             <div>
               <div class="popupCloseButton">&times;</div>
-              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
               <h2>Taurus</h2>
               <h4></h4>
             </div>
@@ -112,8 +110,7 @@
             <span class="helper"></span>
             <div>
               <div class="popupCloseButton">&times;</div>
-              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
               <h2>Gemini</h2>
               <h4></h4>
             </div>
@@ -125,16 +122,15 @@
               <a class="trigger_popup_fricc cancerTrig" id="cancer">Cancer</a>
             </div>
           </div>
-        <div class="hover_bkgr_fricc cancerHover">
-          <span class="helper"></span>
-          <div>
-            <div class="popupCloseButton">&times;</div>
-            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
-            <h2>Cancer</h2>
-            <h4></h4>
+          <div class="hover_bkgr_fricc cancerHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
+              <h2>Cancer</h2>
+              <h4></h4>
+            </div>
           </div>
-        </div>
         </div>
         <!-- second 6 Horoscope buttons on the landing page -->
         <div class="columns">
@@ -145,15 +141,14 @@
               <a class="trigger_popup_fricc leoTrig" id="leo">Leo</a>
             </div>
           </div>
-        <div class="hover_bkgr_fricc leoHover">
-          <span class="helper"></span>
-          <div>
-            <div class="popupCloseButton">&times;</div>
-            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
-            <h2>Leo</h2>
-            <h4></h4>
-          </div>
+          <div class="hover_bkgr_fricc leoHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
+              <h2>Leo</h2>
+              <h4></h4>
+            </div>
           </div>
           <div class="column">
             <div class="border">
@@ -162,15 +157,14 @@
               <a class="trigger_popup_fricc virgoTrig" id="virgo">Virgo</a>
             </div>
           </div>
-        <div class="hover_bkgr_fricc virgoHover">
-          <span class="helper"></span>
-          <div>
-            <div class="popupCloseButton">&times;</div>
-            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
-            <h2>Virgo</h2>
-            <h4></h4>
-          </div>
+          <div class="hover_bkgr_fricc virgoHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
+              <h2>Virgo</h2>
+              <h4></h4>
+            </div>
           </div>
           <div class="column">
             <div class="border">
@@ -179,15 +173,14 @@
               <a class="trigger_popup_fricc libraTrig" id="libra">Libra</a>
             </div>
           </div>
-        <div class="hover_bkgr_fricc libraHover">
-          <span class="helper"></span>
-          <div>
-            <div class="popupCloseButton">&times;</div>
-            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
-            <h2>Libra</h2>
-            <h4></h4>
-          </div>
+          <div class="hover_bkgr_fricc libraHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
+              <h2>Libra</h2>
+              <h4></h4>
+            </div>
           </div>
           <div class="column">
             <div class="border">
@@ -196,15 +189,14 @@
               <a class="trigger_popup_fricc scorpioTrig" id="scorpio">Scorpio</a>
             </div>
           </div>
-        <div class="hover_bkgr_fricc scorpioHover">
-          <span class="helper"></span>
-          <div>
-            <div class="popupCloseButton">&times;</div>
-            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
-            <h2>Scorpio</h2>
-            <h4></h4>
-          </div>
+          <div class="hover_bkgr_fricc scorpioHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
+              <h2>Scorpio</h2>
+              <h4></h4>
+            </div>
           </div>
           <div class="column">
             <div class="border">
@@ -213,15 +205,14 @@
               <a class="trigger_popup_fricc sagittariusTrig" id="sagittarius">Sagittarius</a>
             </div>
           </div>
-        <div class="hover_bkgr_fricc sagittariusHover">
-          <span class="helper"></span>
-          <div>
-            <div class="popupCloseButton">&times;</div>
-            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
-            <h2>Sagittarius</h2>
-            <h4></h4>
-          </div>
+          <div class="hover_bkgr_fricc sagittariusHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
+              <h2>Sagittarius</h2>
+              <h4></h4>
+            </div>
           </div>
           <div class="column">
             <div class="border">
@@ -230,16 +221,15 @@
               <a class="trigger_popup_fricc capricornTrig" id="capricorn">Capricorn</a>
             </div>
           </div>
-        <div class="hover_bkgr_fricc capricornHover">
-          <span class="helper"></span>
-          <div>
-            <div class="popupCloseButton">&times;</div>
-            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px">
-            <h2>Capricorn</h2>
-            <h4></h4>
+          <div class="hover_bkgr_fricc capricornHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px">
+              <h2>Capricorn</h2>
+              <h4></h4>
+            </div>
           </div>
-        </div>
         </div>
       </div>
     </div>
@@ -247,8 +237,9 @@
   <!-- axios script link -->
   <footer class="footer">
     <div class="content has-text-centered">
-      <p>
-        <strong>Yoda Me Astrology</strong> Exceptional Handlers <a href="SM">Stephanie McCandless</a> <a href="ND">Nhi Danis</a>  <a href="MH">Max Higga</a> <a href="MB">Michael Burkett</a>
+      <p id="footer">
+        <strong>Yoda Me Astrology</strong> Exceptional Handlers: <a href="SM">Stephanie McCandless</a> || <a
+          href="ND">Nhi Danis</a> || <a href="MH">Max Higa</a> || <a href="MB">Michael Burkett</a>
 
     </div>
   </footer>
@@ -256,5 +247,5 @@
   <!--personal javascript link-->
   <script src="./assets/app.js"></script>
 </body>
-</html>
 
+</html>
