--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           width="200px" height="200px">
           <br>
           <span class="nav-title">Yoda-Me-Astrology</span>
+          <p>Where you can read the words of wisdom of Master Yoda. </p>
         </div>
         <p class="title">
           Choose Your Horoscope Sign:
@@ -248,7 +249,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p id="footer">
-        <strong>Yoda Me Astrology</strong> Exceptional Handlers: <a href="SM">Stephanie McCandless</a> || <a href="ND">Nhi Danis</a> || <a href="MH">Max Higa</a> || <a href="MB">Michael Burkett</a>
+        <strong>This website is for entertainment purposes only. Yoda Me Astrology</strong> Exceptional Handlers: <a href="SM">Stephanie McCandless</a> || <a href="ND">Nhi Danis</a> || <a href="MH">Max Higa</a> || <a href="MB">Michael Burkett</a>
 
     </div>
   </footer>
