--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p id="footer">
-        <strong>This website is for entertainment purposes only. Yoda Me Astrology</strong> Exceptional Handlers: <a href="SM">Stephanie McCandless</a> || <a href="ND">Nhi Danis</a> || <a href="MH">Max Higa</a> || <a href="MB">Michael Burkett</a>
+        <strong>This website is for entertainment purposes only. Yoda Me Astrology</strong> Exceptional Handlers: <a href="https://github.com/stephimarie">Stephanie McCandless</a> || <a href="ND">Nhi Danis</a> || <a href="MH">Max Higa</a> || <a href="MB">Michael Burkett</a>
 
     </div>
   </footer>
