UPDATE: moved lines around, fixed footer

--- a/index.html
+++ b/index.html
@@ -235,13 +235,19 @@
       </div>
     </div>
   </section>
-  <!-- axios script link -->
+
   <footer class="footer">
     <div class="content has-text-centered">
       <p id="footer">
-        <strong>This website is for entertainment purposes only. Yoda Me Astrology</strong> Exceptional Handlers: <a href="https://github.com/stephimarie">Stephanie McCandless</a> || <a href="ND">Nhi Danis</a> || <a href="MH">Max Higa</a> || <a href="MB">Michael Burkett</a>
+        <strong>This website is for entertainment purposes only. Yoda Me Astrology</strong> Exceptional Handlers: <a
+          href="https://github.com/stephimarie" target="blank">Stephanie McCandless</a> || <a href="ND"
+          target="blank">Nhi Danis</a> || <a href="https://github.com/maxx-808" target="blank">Max Higa</a> || <a
+          href="MB" target="blank">Michael Burkett</a>
+      </p>
     </div>
   </footer>
+
+  <!-- axios script link -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <!--personal javascript link-->
   <script src="./assets/app.js"></script>
