added github profile

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <strong>This website is for entertainment purposes only. Yoda Me Astrology</strong> Exceptional Handlers: <a
           href="https://github.com/stephimarie" target="blank">Stephanie McCandless</a> || <a href="ND"
           target="blank">Nhi Danis</a> || <a href="https://github.com/maxx-808" target="blank">Max Higa</a> || <a
-          href="MB" target="blank">Michael Burkett</a>
+          href="https://github.com/cadeburkett" target="blank">Michael Burkett</a>
       </p>
     </div>
   </footer>
