added last selected user

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <!--Google font-->
   <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
-  <!--jquery script link-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!--Personal CSS link-->
   <link rel="stylesheet" href="./assets/style.css">
+
   <title>Yoda Me Astrology</title>
+
   <!--favicon-->
   <link rel="shortcut icon" href="https://img.icons8.com/flat_round/64/000000/warranty-card.png" />
 </head>
@@ -34,6 +34,7 @@
         <p class="title">
           Choose Your Horoscope Sign:
         </p>
+
         <!-- first 6 Horoscope signs: the button and the popups -->
         <div class="columns">
           <div class="column">
@@ -133,6 +134,7 @@
             </div>
           </div>
         </div>
+
         <!-- second 6 Horoscope buttons on the landing page -->
         <div class="columns">
           <div class="column">
@@ -234,19 +236,26 @@
         </div>
       </div>
     </div>
+    <h6 id="last-select"></h6>
+
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p id="footer">
+          <strong>This website is for entertainment purposes only. Yoda Me Astrology</strong> Exceptional Handlers: <a
+            href="https://github.com/stephimarie" target="blank">Stephanie McCandless</a> || <a href="ND"
+            target="blank">Nhi Danis</a> || <a href="https://github.com/maxx-808" target="blank">Max Higa</a> || <a
+            href="MB" target="blank">Michael Burkett</a>
+        </p>
+      </div>
+    </footer>
   </section>
 
-  <footer class="footer">
-    <div class="content has-text-centered">
-      <p id="footer">
-        <strong>This website is for entertainment purposes only. Yoda Me Astrology</strong> Exceptional Handlers: <a
-          href="https://github.com/stephimarie" target="blank">Stephanie McCandless</a> || <a href="ND"
-          target="blank">Nhi Danis</a> || <a href="https://github.com/maxx-808" target="blank">Max Higa</a> || <a
-          href="MB" target="blank">Michael Burkett</a>
-      </p>
-    </div>
-  </footer>
 
+
+
+
+  <!--jquery script link-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- axios script link -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <!--personal javascript link-->
