update github page & fixed title

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             height="200px">
           <br>
           <span class="nav-title">Yoda-Me-Astrology</span>
-          <p>Where you can read the words of wisdom of Master Yoda. </p>
+          <p class="yoda">Where you can read the words of wisdom of Master Yoda. </p>
         </div>
         <p class="title">
           Choose Your Horoscope Sign:
@@ -242,7 +242,7 @@
       <div class="content has-text-centered">
         <p id="footer">
           <strong>This website is for entertainment purposes only. Yoda Me Astrology</strong> Exceptional Handlers: <a
-            href="https://github.com/stephimarie" target="blank">Stephanie McCandless</a> || <a href="ND"
+            href="https://github.com/stephimarie" target="blank">Stephanie McCandless</a> || <a href="https://github.com/NhiDanis"
             target="blank">Nhi Danis</a> || <a href="https://github.com/maxx-808" target="blank">Max Higa</a> || <a
             href="MB" target="blank">Michael Burkett</a>
         </p>
